monitoria/mac323/4-2-33/grades/Gustavo-Henrique-Faustino-Silva_190856_assignsubmission_file_WordDAG.txt

COMPILATION ERROR

CORREÇÃO AUTOMÁTICA
Quantidade de Testes | Veredito
0 | OK
0 | Erro de Montagem (o grafo dessa query não pode ser montado)
0 | Tempo de Execução Excedido
0 | Resposta Errada
0 | Erro de Execução
Existem 26 testes, se a soma não der 26 quer dizer que houve alguma falha especial em algum teste que não foi identificada pelo corretor

make: '/home/bcc/victorsenam/private/usp/monitoria/mac323/4-2-33/tester/checker/checker' is up to date.
CorretorDoVictaum.java:14: error: cannot find symbol
        public WordDAG ex;
               ^
  symbol:   class WordDAG
  location: class ArgsPasser
CorretorDoVictaum.java:86: error: cannot find symbol
            args.ex = new WordDAG(strings);
                          ^
  symbol:   class WordDAG
  location: class CorretorDoVictaum
Note: CorretorDoVictaum.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
2 errors
Second Compile Method
CorretorDoVictaum.java:14: error: cannot find symbol
        public WordDAG ex;
               ^
  symbol:   class WordDAG
  location: class ArgsPasser
CorretorDoVictaum.java:86: error: cannot find symbol
            args.ex = new WordDAG(strings);
                          ^
  symbol:   class WordDAG
  location: class CorretorDoVictaum
Note: CorretorDoVictaum.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
2 errors
